--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -7,9 +7,26 @@
       body {
         background: black;
       }
+      #input-box {
+  display:block;
+  width:300px;
+  height: 100px;
+  padding: 5px 20px 20px 10px;
+  position: fixed;
+  top:calc(50% - 100px);
+  left:calc(50% - 150px);
+  background: #00a2ff;
+}
     </style>
   </head>
   <body>
+    <div id="input-box" style="display: none">
+      <h4 style="text-align: center;">Select action</h4>
+      <button type="submit">Action #1</button>
+      <button type="submit">Action #2</button>
+      <button type="submit">Action #3</button>
+      <button type="submit">Action #4</button>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
